benchmark-results/main/cseq/concurrentwitness2test.2025-11-17_11-13-00.logfiles/SV-COMP23_unreach-call.cseq-mix008_tso.oepc.yml.log
ConcurrentWitness2Test/start.sh svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix008_tso.oepc.yml/mix008_tso.oepc.i --graphml-witness svcomp23-witness-benchmarks/tools/cseq/pthread-wmm/mix008_tso.oepc.yml/witness.graphml


--------------------------------------------------------------------------------


Traceback (most recent call last):
  File "/home/runner/work/ConcurrentWitness2Test/ConcurrentWitness2Test/ConcurrentWitness2Test/main.py", line 85, in translate_to_c
    sys.exit(-1)
SystemExit: -1
/tmp/BenchExec_run_xfd753wt/tmp/tmpsfz8ar2f.c
Compilation started
/tmp/BenchExec_run_xfd753wt/tmp/tmpsfz8ar2f.c: In function ‘P2’:
/tmp/BenchExec_run_xfd753wt/tmp/tmpsfz8ar2f.c:644:19: error: ‘FALSE’ undeclared (first use in this function)
  644 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_xfd753wt/tmp/tmpsfz8ar2f.c:644:19: note: each undeclared identifier is reported only once for each function it appears in
/tmp/BenchExec_run_xfd753wt/tmp/tmpsfz8ar2f.c: In function ‘P3’:
/tmp/BenchExec_run_xfd753wt/tmp/tmpsfz8ar2f.c:706:19: error: ‘FALSE’ undeclared (first use in this function)
  706 |   weak$$choice0 = FALSE;;
      |                   ^~~~~
/tmp/BenchExec_run_xfd753wt/tmp/tmpsfz8ar2f.c:707:19: error: ‘TRUE’ undeclared (first use in this function)
  707 |   weak$$choice2 = TRUE;;
      |                   ^~~~
/tmp/BenchExec_run_xfd753wt/tmp/tmpsfz8ar2f.c: In function ‘main’:
/tmp/BenchExec_run_xfd753wt/tmp/tmpsfz8ar2f.c:797:19: error: ‘FALSE’ undeclared (first use in this function)
  797 |   weak$$choice0 = FALSE;;
      |                   ^~~~~

Compilation ended (exit code 1)
Verdict: Compilation error
Verdict: Unknown error
